# phisherman

./: .gitignore  LICENSE  README.md  app.py  download_models.py  evaluate_batch.py  main.py  pyproject.toml  requirements.txt
src/: cascade.py  data_loader.py  dataset_config.py  email_detection_constants.py  eml_parser.py  features.py  filter_label.py  preprocessing.py  typosquat_risk.py
src/layers/classical/: train_ml.py
src/layers/rules/: baseline_rules.py
src/layers/supervised/: train_ml.py
src/layers/transformer/: train_transformer.py
src/layers/unsupervised/: train_isolation_forest.py
tests/: test_cascade.py  test_data_loader.py  test_features.py  test_preprocessing.py  test_train_transformer.py
web/: index.html
